2005-01-28  Kalle Marjola  <kmarjola@enpocket.com>
    * doc/userguide/userguide.xml: added HTTP status codes and contents
      to sendsms entry
	
2005-01-28  Kalle Marjola  <kmarjola@enpocket.com>
    * gw/smsbox.c: in sendsms, wait for bearerbox reply before
      replying to HTTP client. NOTE: compatbility breaker if the
      HTTP client is reading the reply content, plus Kannel can now
      return new HTTP status codes. Use 'immediate-sendsms-reply = true'
      in the smsbox group to enable old behaviour.
	
    * gwlib/http.h, gwlib/cfg.def, doc/userguide/userguide.xml: 
      relevant changes

2005-01-28  Stipe Tolj  <stolj@wapme.de> 
    * doc/userguide/userguide.xml: fixed personal email reference.

2005-01-28  Stipe Tolj  <stolj@wapme.de> 
    * test/hello.wml: fixed obviously wml compiling break for 
      checks/check_fakewap.sh.

2005-01-28  Stipe Tolj  <stolj@wapme.de> 
    * checks/check_http.sh, utils/run-checks: moving shell from /bin/sh to
      /bin/bash.
    * checks/check_ppg.sh: moving file condition check from -e (exists) to
      -f (file exists and is regular). 
      Fixing bug #168. Thanks to Stefan Radman <Stefan.Radman@CTBTO.ORG>.
      [Msg-ID: <20050120.152742.094138.593FCF86BC282B0082761599C0E8DE79@CTBTO.ORG>]

2005-01-24  Alexander Malysh <amalysh at kannel.org>
    * gw/urltrans.c: fixed bug #174.
      Thanks to chandave for provided patch.

2005-01-23  Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: apllied patch that includes some http server fixes:
      - don't close listen filedescriptor when accept failed (that can be caused
        bei client just now disconnected or network error)
      - added 'active_list' that saves all active http clients and so while
        shutdown all active clients can be disconnected gracefully (w/o fdset
        warning about active entries) and when listen port removed all active
        clients for this port could be disconnected.
      [Msg-Id: <csluqr$bah$1@sea.gmane.org>]
