@@ -1,3 +1,6 @@
+2005-01-28  Stipe Tolj  <stolj@wapme.de> 
+    * doc/userguide/userguide.xml: fixed personal reference for Kalle.
+
 2005-01-28  Kalle Marjola  <kmarjola@enpocket.com>
     * doc/userguide/userguide.xml: added HTTP status codes and contents
       to sendsms entry
